Mudanças na listagem de agendamentos e outros ajustes